--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,3 @@
-#root {
-	height: 100%;
-}
 html {
 	font-size: 62.5%; /* 16px * 62.5 = 10px = 1rem */
 	box-sizing: border-box;
@@ -44,6 +41,11 @@ body {
 	grid-area: main;
 }
 .footer {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	height: 50px;
+	z-index: 100;
 	grid-area: footer;
 	background-color: #203040;
 	color: #ffffff;
@@ -109,7 +111,6 @@ a:hover {
 }
 .sidebar {
 	position: fixed;
-	transition: all .5s;
 	transform: translateX(-30rem);
 	width: 30rem;
 	background-color: #f0f0f0;
@@ -131,63 +132,4 @@ a:hover {
 	position: absolute;
 	right: .5rem;
 	top: 1.5rem;
-}
-
-/*Product details*/
-.details {
-	display: flex;
-	justify-content: space-between;
-	align-items: flex-start;
-	flex-wrap: wrap;
-	padding: 1rem;
-}
-
-.details-image {
-	flex: 2 1 30rem;
-}
-.details-image img {
-	max-width: 50rem;
-	max-height: 50rem;
-	widows: 100%;
-	margin-left: 30px;
-}
-.details-info {
-	flex: 1 1 30rem;
-}
-.details-action {
-	flex: 2 1 30rem;
-	border: 1rem #8080 solid;
-	border-radius: 0.5rem;
-	background-color: #f8f0f0;
-	padding: 1rem;
-}
-.details-info ul,
-.details-action ul {
-	list-style-type: none;
-	padding: 0;
-}
-.details-info li,
-.details-action li {
-	margin-bottom: 1rem;
-}
-.back-to-result {
-	padding: 1rem;
-}
-
-.details-action ul li:last-child {
-	display: flex;
-	flex-direction: column;
-}
-.button {
-	padding: 1rem;
-	border: .1rem #808080 solid;
-	border-radius: 0.5rem;
-	cursor: pointer;
-}
-.button:hover {
-	border: .1rem #404040;
-}
-
-.button.primary {
-	background-color: #f0c040;
 }
